Added API to retrieve user (Catcher/Subscriber)
