# api/swagger/swagger.yaml
@@ -31,6 +31,30 @@ paths:
           schema:
             # a pointer to a definition
             $ref: "#/definitions/SuccessResponse"
+  /users/email/{email}:
+    # binds a127 app logic to a route
+    x-swagger-router-controller: registration
+    get:
+      description: Returns User (Catcher/Subscriber) info to the caller
+      # used as the method name of the controller
+      operationId: getUserByEmail
+      parameters:
+        - in: path
+          name: email
+          description: User Email
+          required: true
+          type: string
+      responses:
+        "200":
+          description: Success
+          schema:
+            # a pointer to a definition
+            $ref: "#/definitions/SuccessResponse"
+        # responses may fall through to errors
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
   /catchers/{id}:
     # binds a127 app logic to a route
     x-swagger-router-controller: registration
